# forge

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
assets/scripts/: scene.lua
ci/: run_sandbox.ps1  run_sandbox.sh
cmake/: CompilerWarnings.cmake  Dependencies.cmake  EmbedShaders.cmake
docs/: DECISIONS.md  ENGINE_GAPS.md  PUZZLE_IDEAS.md
engine/: CMakeLists.txt
engine/include/forge/: forge.hpp
engine/include/forge/anim/: Clip.hpp
engine/include/forge/assets/: Assets.hpp
engine/include/forge/audio/: Audio.hpp
engine/include/forge/core/: Log.hpp
engine/include/forge/ecs/: Entity.hpp  Registry.hpp
engine/include/forge/fx/: Particles.hpp
engine/include/forge/physics/: PhysicsWorld.hpp
engine/include/forge/platform/: Input.hpp  Window.hpp
engine/include/forge/renderer/: Renderer.hpp  VulkanContext.hpp
engine/include/forge/scripting/: ScriptEngine.hpp
engine/include/forge/ui/: EditorUi.hpp
engine/shaders/: mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  shadow.vert  shadow.vert.spv  triangle.frag  triangle.vert  triangle.vert.spv
engine/src/assets/: ImageLoader.cpp  MeshLoader.cpp
engine/src/audio/: Audio.cpp
engine/src/core/: Log.cpp
engine/src/physics/: PhysicsWorld.cpp
engine/src/platform/: Input.cpp  Window.cpp
engine/src/renderer/: Renderer.cpp  RendererInternal.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanCommon.hpp  VulkanContext.cpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanTexture.cpp  VulkanTexture.hpp
engine/src/scripting/: ScriptEngine.cpp
engine/src/ui/: EditorUi.cpp
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
tools/: gen_kick_wav.py  gen_models.py  gen_music.py  gen_sounds.py  gen_textures.py  gen_torus.py
